--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8573,3 +8573,8 @@ body.md-skin {
 .select2-container {
     min-width:200px;
 }
+
+.doctor-list {
+    /*column-count: 4;*/
+    /*width: 100%;*/
+    }
