--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8587,6 +8587,6 @@ body.md-skin {
 .nav-tabs > li.active > a:hover{
     color: #000;
 }
-#agencySingleTab > li{
+#agencySingleTab ,#contractorTab > li{
     background-color: #f3f3f4;
 }
